--- a/index.html
+++ b/index.html
@@ -371,11 +371,11 @@
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <form name="contact" method="POST" data-netlify="true">
+                    <form name="contact" method="POST" role="form" data-netlify="true">
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input name="name" type="name" class="form-control" id="name" placeholder="Your Name">
+                                    <input name="name" type="text" class="form-control" id="name" placeholder="Your Name">
                                     <label for="name">Your Name</label>
                                 </div>
                             </div>
