--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
     <!-- Projects Start -->
     <div class="container-xxl py-6 pt-5" id="project">
         <div class="container">
-            <div class="row g-5 mb-5 align-items-center wow fadeInUp" data-wow-delay="0.1s">
+            <div class="row g-5 mb-5 align-items-center">
                 <div class="col-lg-6">
                     <h1 class="display-5 mb-0">Most Popular</h1>
                 </div>
             </div>
-            <div class="row g-4 portfolio-container wow fadeInUp" data-wow-delay="0.1s">
+            <div class="row g-4 portfolio-container">
                 <div class="col-lg-4 col-md-6 portfolio-item first">
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/project-1.jpg" alt="">
@@ -371,7 +371,7 @@
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <form name="contact" method="POST" role="form" data-netlify="true">
+                    <form name="contact" method="POST" role="" data-netlify="true">
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
