with success page nelify

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/bg-icon.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -56,7 +56,7 @@
                 <a href="#skill" class="nav-item nav-link">Skills</a>
                 <a href="#service" class="nav-item nav-link">Services</a>
             </div> -->
-            <a href="index.html" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block">
+            <a href="index.html" class="navbar-brand py-3 px-4 mx-3 d-none d-lg-block">
                 <h1 class="text-primary fw-bold m-0">DEXTROUS SERVICES</h1>
             </a>
             <!-- <div class="navbar-nav me-auto py-0">
@@ -124,7 +124,7 @@
         <div class="container">
             <div class="row g-5 mb-5 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-6">
-                    <h1 class="display-5 mb-0">Most Popular</h1>
+                    <h1 class="display-5 mb-0">AVAILABLE PRODUCTS</h1>
                 </div>
                 <div class="col-lg-6 text-lg-end">
                     <a class="btn btn-primary py-3 px-5" href="https://wa.me/message/RDSUYQXPDBL6C1" target="_blank">CHAT US</a>
@@ -132,6 +132,7 @@
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <a href="rechargeable-clipper-order.html">
                     <div class="team-item position-relative">
                         <img class="img-fluid rounded" src="img/project-1.jpg" alt="">
                         <div class="team-text bg-white rounded-end p-4">
@@ -141,18 +142,22 @@
                             <i class="fa fa-arrow-right fa-2x text-primary"></i>
                         </div>
                     </div>
+                    </a>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="team-item position-relative">
-                        <img class="img-fluid rounded" src="img/project-2.jpg" alt="">
-                        <div class="team-text bg-white rounded-end p-4">
-                            <div>
-                                <h5>ADJUSTABLE PHONE STAND</h5>
+                    <a href="wrinkle-straitening-iron.html">
+                        <div class="team-item position-relative">
+                            <img class="img-fluid rounded" src="img/wrinkle-straitening-iron/wrinkle-iron1.jpg" alt="wrinkle-iron">
+                            <div class="team-text bg-white rounded-end p-4">
+                                <div>
+                                    <h5>WRINKLE STRAITENING IRON</h5>
+                                </div>
+                                <i class="fa fa-arrow-right fa-2x text-primary"></i>
                             </div>
-                            <i class="fa fa-arrow-right fa-2x text-primary"></i>
                         </div>
-                    </div>
+                        </a>
                 </div>
+                
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item position-relative">
                         <img class="img-fluid rounded" src="img/project-3.jpg" alt="">
