--- a/wrinkle-straitening-iron.html
+++ b/wrinkle-straitening-iron.html
@@ -47,49 +47,74 @@
         <div class="container-fluid py-5">
 
             <!-- PRODUCT NAME -->
-            <h1 class="display-5 text-center mb-5 wow fadeInUp text-danger" data-wow-delay="0.1s">Rechargeable 
-            Cordless Clipper</h1>
+            <h1 class="display-5 text-center mb-3 wow fadeInUp text-danger" data-wow-delay="0.1s">WRINKLE STRAITENING IRON</h1>
 
             <!-- PRODUCT IMAGE -->
             <div class="text-center wow fadeInUp my-3" data-wow-delay="0.3s">
                 <div class="team-item position-relative">
-                    <img class="img-fluid rounded" src="img/project-1.jpg" alt="">
+                    <img class="img-fluid rounded" src="img/iron1.jpg" alt="">
                 </div>
             </div>
+
+            <!-- PRODUCT INTRO -->
+            <p class="my-3">
+                This Portable 2 in 1 Steamer and Iron is safe to use on different types of materials and not only does it steams out unwanted garment wrinkles, it also deodorize your garments at the same time too. Forget about spending a fortune on dry cleaning, once you get the Steam Buddy you’ll be saving big bucks and having neat wrinkle-free clothes Suitable for: Clothes & Garments; Drapes & Sheers; Tablecloths & Bedding; Cloth Shower Curtains; Upholstered Furniture and Carpets.
+            </p>
 
             <!-- PRODUCT KEY FEATURES -->
             <div>
                 <h3 class="my-5 bg-warning text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">KEY FEATURES</h3>
-          <p><span>&#10003;</span> Portable and Easy to use</p>
-                <p><span>&#10003;</span> Safe for Adult and Children</p>
-                <p><span>&#10003;</span> Fast Charging (2 hours, 1200mah)</p>
-                <p><span>&#10003;</span> Ultra Quiet Design</p>
-                <p><span>&#10003;</span> USB Charger</p>
-                <p><span>&#10003;</span> Tested by various Customers and lots of positive reviews</p>
-                <p><span>&#10003;</span> Easy to Clean and Maintain</p>
+                <p><span>&#10003;</span> This product is perfect to remove wrinkles and make your clothes look good.</p>
+                <p><span>&#10003;</span> 2-in-1 Ironing capability; can be used for Ironing and dry cleaning.</p>
+                <p><span>&#10003;</span> Temperature adjusting knob; the temperature can be adjusted accordingly.</p>
+                <p><span>&#10003;</span> Over hot protection; ability to protect against too high temperature.</p>
+                <p><span>&#10003;</span> It effectively irons clothes, kills bacteria and removes mites.​</p>
+                <p><span>&#10003;</span> High temperature steam, fast ironing and pressing without hurting the fabric</p>
+                <p><span>&#10003;</span> Ergonomic handle designed for comfortable and better operation.</p>
+                <p><span>&#10003;</span> Unlike the traditional iron, this wrinkle straightening iron is suitable for any ironing position.</p>
+                <p><span>&#10003;</span> No more burning or damaging fabrics with heavy, unwieldy irons.</p>
+                <p><span>&#10003;</span> Safe to use on different types of materials & fabrics.</p>
+                <p><span>&#10003;</span> Portable and easy to travel with.</p>
+                <p><span>&#10003;</span> Lightweight, hand held steamer heats up in seconds for a quick & convenient use.</p>
+                <p><span>&#10003;</span> Tested by various Customers and lots of positive reviews.</p>
             </div>
 
             <!-- MORE PHOTOS -->
             <!-- PRODUCT VIDEO -->
             <div class="text-center wow fadeInUp mt-5" data-wow-delay="0.3s">
                 <video width="330" height="440" controls>
-                    <source src="img/Rechargeable Clipper And Trimmer_001_001.mp4" type="video/mp4">
+                    <source src="img/wrinkle-straitening-iron/wrinkle-straitening-iron.mp4" type="video/mp4" alt="video">
                     Your browser does not support the video tag.
                   </video>
             </div>
             <div class="text-center wow fadeInUp my-3" data-wow-delay="0.3s">
                 <div class="team-item position-relative">
-                    <img class="img-fluid rounded" src="img/2.jpg" alt="">
+                    <img class="img-fluid rounded" src="img/wrinkle-straitening-iron/wrinkle-iron1.jpg" alt="wrinkle-iron">
                 </div>
             </div>
             <div class="text-center wow fadeInUp my-3" data-wow-delay="0.3s">
                 <div class="team-item position-relative">
-                    <img class="img-fluid rounded" src="img/Clipper2.jpg" alt="">
+                    <img class="img-fluid rounded" src="img/wrinkle-straitening-iron/wrinkle-iron2.jpg" alt="wrinkle-iron">
                 </div>
             </div>
             <div class="text-center wow fadeInUp my-3" data-wow-delay="0.3s">
                 <div class="team-item position-relative">
-                    <img class="img-fluid rounded" src="img/project-6.jpg" alt="">
+                    <img class="img-fluid rounded" src="img/wrinkle-straitening-iron/wrinkle-iron3.jpg" alt="wrinkle-iron">
+                </div>
+            </div>
+            <div class="text-center wow fadeInUp my-3" data-wow-delay="0.3s">
+                <div class="team-item position-relative">
+                    <img class="img-fluid rounded" src="img/wrinkle-straitening-iron/wrinkle-iron4.jpg" alt="wrinkle-iron">
+                </div>
+            </div>
+            <div class="text-center wow fadeInUp my-3" data-wow-delay="0.3s">
+                <div class="team-item position-relative">
+                    <img class="img-fluid rounded" src="img/wrinkle-straitening-iron/wrinkle-iron5.jpg" alt="wrinkle-iron">
+                </div>
+            </div>
+            <div class="text-center wow fadeInUp my-3" data-wow-delay="0.3s">
+                <div class="team-item position-relative">
+                    <img class="img-fluid rounded" src="img/wrinkle-straitening-iron/wrinkle-iron6.jpg" alt="wrinkle-iron">
                 </div>
             </div>
             
@@ -98,8 +123,8 @@
             <h2 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">FREE Delivery, Nationwide Delivery, Pay On Delivery, Fast Delivery!</h2>
 
             <!-- PROMO -->
-            <h5 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">OLD PRICE <del>₦22,500</del></h5>
-            <h2 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">CURRENT PROMO PRICE<span class="text-danger"> ₦11,500</span></h2>
+            <h5 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">OLD PRICE <del>₦19,500</del></h5>
+            <h2 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">CURRENT PROMO PRICE<span class="text-danger"> ₦14,500</span></h2>
 
             <h2 class="text-danger text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">PROMO ENDS TODAY!</h2>
             </div>
@@ -112,7 +137,7 @@
 
             <!-- form -->
             <div class="text-center wow fadeInUp my-3" data-wow-delay="0.5s">
-                <form name="rechargeableClipperOrder" action="/success.html" method="POST" role="" data-netlify="true">
+                <form name="wrinkleStraiteningIron" action="/success.html" method="POST" role="" data-netlify="true">
                     <div class="row g-3">
                         <div class="col-md-6">
                             <div>
